--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,31 @@
+:root {
+  --black: #313131;
+  --crimson: #ed1d24;
+  --yellow: #d8be54;
+  --pink: #da29ac;
+  --purple: #8d09f7;
+  --indigo: #5e2bff;
+  --darkviolet: #8d09f7;
+  --mediumpurple: #9381ff;
+  --transparentmediumpurple: #9481ff17;
+  --candypink: #ff70a6;
+  --darkgray: #535353;
+  --midGray: #838383;
+  --lightgray: #e0e0e0;
+  --transparentLightGray: #e6e4e4d2;
+  --offwhite: #f3f3f1;
+  --regularFont: "Open Sans", sans-serif;
+  --headingFont: "Gorditas", cursive;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
+    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
