--- a/src/components/Layout.module.css
+++ b/src/components/Layout.module.css
@@ -6,12 +6,13 @@
 .contentWrapper {
   min-height: 100vh;
   overflow-y: auto;
-  background-color: var(--dirtysnow);
+  background-color: var(--offwhite);
   position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 1rem 3rem;
 }
 
 @media (max-width: 1200px) {
