--- a/src/components/Layout.module.css
+++ b/src/components/Layout.module.css
@@ -1,6 +1,8 @@
 .container {
   display: flex;
   justify-content: center;
+  background-image: url("../images/dot-grid.png");
+  background-repeat: repeat;
 }
 
 .contentWrapper {
