added new fonts

--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,8 @@
   --lightgray: #e0e0e0;
   --transparentLightGray: #e6e4e4d2;
   --offwhite: #f3f3f1;
-  --regularFont: "Open Sans", sans-serif;
-  --headingFont: "Gorditas", cursive;
+  --regularFont: "Crimson Text", serif;
+  --headingFont: "Chivo", sans-serif;
 }
 
 body {
