--- a/src/components/Form.module.css
+++ b/src/components/Form.module.css
@@ -1,7 +1,6 @@
 .mainContainer {
   display: flex;
   justify-content: space-between;
-  height: 100vh;
   width: 100%;
   font-family: var(--regularFont);
 }
@@ -59,8 +58,8 @@
   font-size: 0.9rem;
   color: var(--darkgray);
   padding: 0.3rem 0.5rem;
-  border: 1px solid var(--darkgray);
-  border-radius: 10px;
+  border: 1px solid var(--midGray);
+  border-radius: 4px;
   outline: none;
 }
 
