--- a/src/components/Layout.module.css
+++ b/src/components/Layout.module.css
@@ -19,22 +19,26 @@
   display: flex;
   font-family: var(--headingFont);
   padding: 0.5rem 1rem;
-  background-color: #222222;
+  background-image: linear-gradient(to bottom, var(--darkolivegreen), var(--black));
 }
 
 .logoContainer {
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
 
 .logoText {
   color: var(--offwhite);
+  letter-spacing: 0.1rem;
+  font-family: var(--monospaceFont);
   font-size: 1.5rem;
   margin: 0 1rem;
   text-align: end;
   display: flex;
   align-items: flex-end;
+  cursor: pointer;
 }
 
 .monke {
@@ -46,12 +50,13 @@
   overflow-y: auto;
   background-color: var(--offwhite);
   position: relative;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-grow: 1;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 1rem 3rem;
 }
 
 .contentWrapper {
@@ -59,6 +64,40 @@
   padding: 1px;
   border-radius: 8px;
   margin-right: 2rem;
+}
+
+.left {
+  left: 0;
+  background: url(../images/jon-flobrant-lRSChvh1Mhs-unsplash.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.right {
+  right: 0;
+  background: url(../images/roberto-nickson-bwIqQ5qQhXs-unsplash.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.leftHover.left {
+  transition-duration: 0.7s;
+  width: 75%;
+}
+
+.leftHover.right {
+  transition-duration: 0.7s;
+  width: 25%;
+}
+
+.rightHover.right {
+  transition-duration: 0.7s;
+  width: 75%;
+}
+
+.rightHover.left {
+  transition-duration: 0.7s;
+  width: 25%;
 }
 
 .backgroundContainer {
@@ -103,6 +142,14 @@
 }
 
 @media (max-width: 900px) {
+  .left {
+    top: 0;
+  }
+
+  .right {
+    bottom: 0;
+  }
+
   .container {
     flex-direction: column;
   }
