--- a/src/index.css
+++ b/src/index.css
@@ -18,8 +18,8 @@
   --transparentLightGray: #e6e4e4d2;
   --offwhite: #f3f3f1;
   --regularFont: "Comfortaa", sans-serif;
-  --headingFont: "PT Sans", sans-serif;
-  --monospaceFont: "Roboto Mono", monospace;
+  --headingFont: "Raleway", sans-serif;
+  --monospaceFont: "Roboto Slab", serif;
 }
 
 body {
