--- a/src/components/SplitPage.module.css
+++ b/src/components/SplitPage.module.css
@@ -18,6 +18,14 @@
     var(--peru) 291deg
   );
   padding: 0.1rem;
+  width: 75%;
+}
+
+.icon {
+  height: 1rem;
+  width: auto;
+  color: var(--black);
+  margin-right: 0.25rem;
 }
 
 .contentContainer {
@@ -51,11 +59,18 @@
 
 .header {
   font-size: 2rem;
-  font-weight: bold;
   color: var(--offwhite);
+  font-family: var(--headingFont);
   margin: 0;
-  margin-bottom: 1rem;
   white-space: nowrap;
+}
+
+.subtext {
+  color: var(--offwhite);
+  margin-bottom: 1rem;
+  font-size: 0.7rem;
+  width: 80%;
+  text-align: center;
 }
 
 .button {
@@ -65,8 +80,13 @@
   border-radius: 10px;
   padding: 0.5rem;
   font-family: var(--monospaceFont);
-  font-weight: 500;
-  font-size: 0.9rem;
+  text-transform: uppercase;
+  font-weight: 600;
+  letter-spacing: 0.05rem;
+  font-size: 0.7rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .button:hover {
@@ -82,5 +102,37 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+  }
+}
+
+@media (max-width: 600px) {
+  .contentContainer {
+    padding: 1rem 0.5rem;
+  }
+
+  .header {
+    font-size: 1.5rem;
+  }
+
+  .subtext {
+    font-size: 0.65rem;
+  }
+}
+
+@media (max-width: 400px) {
+  .header {
+    font-size: 1.25rem;
+  }
+
+  .subtext {
+    font-size: 0.6rem;
+  }
+  .button {
+    cursor: pointer;
+    width: 9rem;
+    border: 1px solid var(--offwhite);
+    border-radius: 10px;
+    padding: 0.4rem;
+    font-size: 0.6rem;
   }
 }
