--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
   --darkolivegreen: #674e38;
   --peru: #aa7756;
   --darkgray: #2a2928;
-  --midGray: #838383;
+  --midgray: #838383;
   --lightgray: #e0e0e0;
   --transparentLightGray: #e6e4e4d2;
   --offwhite: #f3f3f1;
