--- a/src/components/Form.module.css
+++ b/src/components/Form.module.css
@@ -1,5 +1,5 @@
 .mainWrapper {
-  height: 100%;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -7,9 +7,9 @@
 }
 
 .innerWrapper {
+  margin: 4rem 0;
   width: 800px;
   background-color: var(--offwhite);
-  height: 75vh;
   opacity: 90%;
   padding: 2rem;
   border-radius: 20px;
@@ -255,8 +255,7 @@
 
   .innerWrapper {
     width: 90%;
-    height: 80vh;
-    margin-top: 2rem;
+    margin: 4rem 0;
     padding: 1rem;
   }
 
@@ -361,7 +360,7 @@
     justify-content: center;
     width: 95%;
     padding: 0.5rem 0.25rem;
-    height: 85vh;
+    margin: 4rem 0;
   }
 
   .dropdownContentActive {
@@ -375,9 +374,6 @@
 }
 
 @media (max-width: 400px) {
-  .innerWrapper {
-    margin-top: 1rem;
-  }
   .inputField {
     justify-content: space-between;
   }
