--- a/src/components/Layout.module.css
+++ b/src/components/Layout.module.css
@@ -83,7 +83,7 @@
 
 .carForm {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background: url(../images/luke-stackpoole-x2qSNIEZuEE-unsplash.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -91,7 +91,7 @@
 
 .houseForm {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background: url(../images/roam-in-color-RryFk4n-vOs-unsplash.jpg);
   background-repeat: no-repeat;
   background-size: cover;
