--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -13,6 +13,7 @@
   left: 1rem;
   z-index: 99;
   display: flex;
+  text-decoration: none;
   justify-content: center;
   align-items: center;
   cursor: pointer;
@@ -73,28 +74,11 @@
   background-color: var(--offwhite);
   position: relative;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   display: flex;
   flex-grow: 1;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-}
-
-.carForm {
-  width: 100%;
-  min-height: 100vh;
-  background: url(../../images/luke-stackpoole-x2qSNIEZuEE-unsplash.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.houseForm {
-  width: 100%;
-  min-height: 100vh;
-  background: url(../../images/roam-in-color-RryFk4n-vOs-unsplash.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
 }
 
 .contentWrapper {
