--- a/src/components/Forms/Form.module.css
+++ b/src/components/Forms/Form.module.css
@@ -1,4 +1,5 @@
 .carBackground {
+  flex-grow: 1;
   min-height: 100%;
   min-width: 100%;
   background: url(../../images/luke-stackpoole-x2qSNIEZuEE-unsplash.jpg);
@@ -7,6 +8,7 @@
 }
 
 .houseBackground {
+  flex-grow: 1;
   min-height: 100%;
   min-width: 100%;
   background: url(../../images/roam-in-color-RryFk4n-vOs-unsplash.jpg);
