Updated opacity to decimal value for compatibility

--- a/src/components/Forms/Form.module.css
+++ b/src/components/Forms/Form.module.css
@@ -28,7 +28,7 @@
   margin: 4rem 0;
   width: 800px;
   background-color: var(--offwhite);
-  opacity: 90%;
+  opacity: 0.9;
   padding: 2rem;
   border-radius: 20px;
 }
