--- a/src/components/Forms/Form.module.css
+++ b/src/components/Forms/Form.module.css
@@ -107,6 +107,7 @@
   color: var(--darkgray);
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
 .inputField > input {
@@ -118,6 +119,11 @@
   border: 1px solid var(--midgray);
   border-radius: 4px;
   outline: none;
+}
+
+.tooltip {
+  font-weight: bold;
+  font-size: 1rem;
 }
 
 .buttonAndFormWrapper {
@@ -275,6 +281,7 @@
 .disclaimer {
   font-size: 0.65rem;
   padding: 1rem 1rem 0rem 1rem;
+  margin-top: 1rem;
   color: var(--midgray);
 }
 
@@ -282,9 +289,18 @@
   color: var(--darkgray);
 }
 
+.resultsContainer {
+  min-width: 20rem;
+  padding: 0 1rem;
+}
+
 @media (max-width: 900px) {
   .mainContainer {
     flex-direction: column;
+  }
+
+  .resultsContainer {
+    text-align: center;
   }
 
   .parameterWrapper {
@@ -348,6 +364,10 @@
     display: flex;
     align-items: center;
   }
+
+  .buttonContainer {
+    margin-top: 1rem;
+  }
 }
 
 @media (max-width: 600px) {
@@ -398,9 +418,14 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 95%;
-    padding: 0.5rem 0.25rem;
+    padding: 2rem 0.25rem;
+    width: 100%;
+    border-radius: 0;
     margin: 4rem 0;
+  }
+
+  .mainResultsContainer {
+    margin: 0;
   }
 
   .dropdownContentActive {
@@ -408,7 +433,6 @@
   }
 
   .buttonContainer {
-    margin-top: 0.25rem;
     padding: 0 2.55rem;
   }
 }
