--- a/src/components/SplitPage/SplitPage.module.css
+++ b/src/components/SplitPage/SplitPage.module.css
@@ -68,6 +68,10 @@
 .subtext {
   color: var(--offwhite);
   margin-bottom: 1rem;
+  height: 2rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  line-height: 1rem;
   font-size: 0.7rem;
   width: 80%;
   text-align: center;
